2005-09-28  Jan Beulich  <jbeulich@novell.com>

	* dw2gencfi.c (dot_cfi): Call ignore_rest_of_line when not fully
	parsing the input.
	(dot_cfi_startproc): Likewise.
	(dot_cfi_endproc): Likewise. Also check no extra input was given.
	(dot_cfi_escape): Likewise.

2005-09-28  Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.h (x86_cons_fix_new): Declare unconditionally.
	(TC_CONS_FIX_NEW): Define unconditionally.
	(x86_pe_cons_fix_new): Remove.
	* config/tc-i386.c (signed_cons): New.
	(md_pseudo_table): Add slong.
	(x86_cons_fix_new): Declare unconditionally.
	(x86_pe_cons_fix_new): Merge into x86_cons_fix_new.
	(tc_gen_reloc): Also consider BFD_RELOC_X86_64_32S for gotpc
	conversion.

2005-09-28  Arnold Metselaar  <arnold.metselaar@planet.nl>

	* app.c (do_scrub_chars <LEX_IS_SYMBOL_COMPONENT>): Check for full
	buffer after copying string.

2005-09-27  Paul Brook  <paul@codesourcery.com>

	* config/arm.c (arm_cpus): Add more cpu names.
	* doc/c-arm.texi: Document them.

2005-09-21  Alan Modra  <amodra@bigpond.net.au>

	* read.c (pseudo_set): Don't set undefined symbols to expr_section.

2005-09-20  Richard Henderson  <rth@redhat.com>

	* dwarf2dbg.c (process_entries): Fix uninitialized variable warning.

2005-09-20  Richard Henderson  <rth@redhat.com>

	* dwarf2dbg.c (struct line_entry): Replace frag and frag_ofs
	with label.
	(dwarf2_loc_mark_labels): New.
	(dwarf2_gen_line_info_1): Split out of ...
	(dwarf2_gen_line_info): ... here.  Create the temp symbol here.
	(dwarf2_emit_label): New.
	(dwarf2_directive_loc_mark_labels): New.
	(out_set_addr): Take a symbol instead of frag+ofs.
	(relax_inc_line_addr): Likewise.
	(emit_inc_line_addr): Assert delta non-negative.
	(process_entries): Remove dead code.  Update to work with temp
	symbols instead of frag+ofs.
	* dwarf2dbg.h (dwarf2_directive_loc_mark_labels): Declare.
	(dwarf2_emit_label, dwarf2_loc_mark_labels): Declare.
	* config/obj-elf.c (elf_pseudo_tab): Add loc_mark_labels.